#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2014-06-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999919 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-06-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999918 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999917 released.

        * New version of Term::Menus paired with this release.


2014-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999916 released.

        * New version of Term::Menus paired with this release.


2014-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999915 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999914 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-06-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999913 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999912 released.

        * Relocated 'Throwable' installation in Makefile.PL.


2014-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999911 released.

        * More work on New User Experience.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * New version of Term::RawInput paired with this release.

