@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 3b35c8ec18d4b61a690c812986d4bc7639cb1e5b ChangeLog
+SHA1 c54568578ce25ee61d303f9d61a560c2e5542461 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 c3614f2932a168c2da69a3fb1484ebbbd10ed347 META.yml
-SHA1 786e52063bf667f8aeb50d4a75f919d200ed7770 Makefile.PL
+SHA1 ec61c0f289a00e47aff1b38ee7526004bcd33c1a META.yml
+SHA1 511b6053363144619563c8cd7e403e679d3c3803 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 2f8a4e5557764a309575db9d04c9f03312866a40 lib/Net/FullAuto.pm
+SHA1 ce901e8a209ef97d9f00ad07e88fd583b55b6557 lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTrroIAAoJEBa/9Pad787EmScIAOEUrbiC3PWKvpkQ/WDHwQvz
-Rer35qIfmCH/5H7JWMSOO9eQQccYL5ZOj+p06exGQSTPVtvDrM1zmbFnw4j6Yq1c
-kcp7ZmkTHros0v74MZf2Yrz5Wt3/Y4B+i6Wav/cbNxmP9lXIgaUKm87F0ytEr7AG
-jz8yMvW082jBi+lTE713Ad8jwDh2h5VGDXCpoHAEC+Sjfkd65lsqctVhPJjMKMCA
-MyWr8XMJNAlruWariZHGqJhykvcmtBZeZZ8Yvfsxb2a753lI6nhT7dWHpF2IDKQq
-ewVilNn7VHtqNkO9qIUzFADOzbBkDLXiT8g2QoZ2DLe8n5HKDjei0XcaTRa2tu0=
-=8kCS
+iQEcBAEBAgAGBQJTruc6AAoJEBa/9Pad787EsSUH/13ba+lGHIYoBbe7htljPpy0
+YtvmBtY/EhNsQIHCOooxgWkG1sRKyZZvfIZlCDY63E9S2pZGX/eL0F357qcQJ7WJ
+FMWgI1SXkJhPx9jdR30xZnZt7E0r98hCoVekXu9aSm6akqGOd1oNWJERTPS/tPtp
+4n+Tz5qV0Wz/SwLxKd2tVdYNnLjXLn1h1NQOZ0SNeCi8clPtIl7eyK+SR6noOF5b
+7vwZOacmvUvQ8ya/m06dNzSA0QwAVE0DbJe0+JgHyPWJcl79kWOF1YwYd7x47/gf
+lZZWYxwurNYmfSDRWPSfwHAZ0cSTmGpBm2XKUQq3BxlEbKWNDX97yJIa4EDNTdM=
+=NZvj
 -----END PGP SIGNATURE-----
