@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9999999919';
+our $VERSION='0.9999999920';
 
 
 use 5.005;
