@@ -21,6 +21,15 @@
 
 2014-06-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999920 released.
+
+        * Updated Makefile.PL for AWS Ubuntu installations.
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-06-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999919 released.
 
         * Updated Makefile.PL for AWS Ubuntu installations.
